# yuyash-auto-forex-aws

./: .env.example  AGENTS.md  README.md  pyproject.toml
src/aws/: __init__.py  athena.py  athena_execution.py  athena_mapping.py  athena_models.py  athena_prefetch.py  athena_results.py  athena_settings.py  athena_source_services.py  athena_sql.py  metrics.py
tests/: test_athena.py  test_metrics.py
